Aprendendo sobre function com exemplos praticos.